--- a/index.html
+++ b/index.html
@@ -5,8 +5,29 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MUMMAT</title>
     <link rel="stylesheet" href="./styles/app.css">
+    <script src="https://kit.fontawesome.com/aba09469eb.js" crossorigin="anonymous"></script>
 </head>
 <body>
+    
+    <header class="header">
+        <div class="header__capa"></div>
+        <div class="header__wrapper">
+            <h1 class="header-title">
+                <img src="./assets/mummat-creazy.jpg" class="header__icon">
+                mummat
+            </h1>
+
+            <div class="header__content">
+                <div class="header__rrss">
+                    <em class="fa-brands fa-discord"></em>
+                    <em class="fa-brands fa-telegram"></em>
+                    <em class="fa-brands fa-instagram"></em>
+                    <em class="fa-brands fa-x-twitter"></em>
+                </div>
+                <a href="#" class="btn">BUY</a>
+            </div>
+        </div>
+    </header>
     
     <script src="./scripts/main.js"></script>
 </body>
