Feature: News changes

--- a/index.html
+++ b/index.html
@@ -1,20 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MUMMAT</title>
     <link rel="stylesheet" href="./styles/app.css">
+    <script src='https://terminal.jup.ag/main-v3.js'></script>
     <script src="https://kit.fontawesome.com/aba09469eb.js" crossorigin="anonymous"></script>
 </head>
+
 <body>
-    
-    <header class="header">
+    <nav class="header">
         <div class="header__capa"></div>
         <div class="header__wrapper">
             <h1 class="header-title">
-                <img src="./assets/mummat-creazy.jpg" class="header__icon">
-                mummat
+                <img src="./assets/favIcon.png" class="header__icon">
             </h1>
 
             <div class="header__content">
@@ -27,8 +28,268 @@
                 <a href="#" class="btn">BUY</a>
             </div>
         </div>
+    </nav>
+    <header class="hero">
+        <div class="hero__wrapper">
+
+            <img src="./assets/layout-img-3.jpg" alt="" class="hero__layout-img-one">
+
+            <img src="./assets/layout-img-4.jpg" alt="" class="hero__layout-img-two">
+
+            <img class="hero__img" src="./assets/hero_title.png" alt="Hero Image">
+        </div>
     </header>
-    
+
+    <div class="banner-information">
+        <div class="banner-information__rrss">
+            <em class="fa-brands fa-discord"></em>
+            <em class="fa-brands fa-telegram"></em>
+            <em class="fa-brands fa-instagram"></em>
+            <em class="fa-brands fa-x-twitter"></em>
+        </div>
+        <div class="banner-information__contract">
+            <p class="banner-information__contract-address">CA:43uhykFm8Y9gLvHrWs7r7w1HCKu6vikDi7j394FaSfNz</p>
+            <button class="banner-information__contract-copy">
+                <svg width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <path
+                        d="M9.33325 5.33333H2.66659C1.93125 5.33333 1.33325 5.93133 1.33325 6.66667V13.3333C1.33325 14.0687 1.93125 14.6667 2.66659 14.6667H9.33325C10.0686 14.6667 10.6666 14.0687 10.6666 13.3333V6.66667C10.6666 5.93133 10.0686 5.33333 9.33325 5.33333Z"
+                        fill="white" />
+                    <path
+                        d="M13.3333 1.33333H6.66659C6.31296 1.33333 5.97383 1.47381 5.72378 1.72386C5.47373 1.97391 5.33325 2.31304 5.33325 2.66667V4H10.6666C11.0202 4 11.3593 4.14048 11.6094 4.39052C11.8594 4.64057 11.9999 4.97971 11.9999 5.33333V10.6667H13.3333C13.6869 10.6667 14.026 10.5262 14.2761 10.2761C14.5261 10.0261 14.6666 9.68696 14.6666 9.33333V2.66667C14.6666 2.31304 14.5261 1.97391 14.2761 1.72386C14.026 1.47381 13.6869 1.33333 13.3333 1.33333Z"
+                        fill="white" />
+                </svg>
+                COPY ADDRESS
+            </button>
+        </div>
+    </div>
+
+    <main class="main-container" role="main">
+        <div class="scroller" data-direction="left" data-speed="slow">
+            <div class="scroller__inner">
+              <h1>MUMMAT</h1>
+              <h1>MUMMAT</h1>
+              <h1>MUMMAT</h1>
+              <h1>MUMMAT</h1>
+              <h1>MUMMAT</h1>
+              <h1>MUMMAT</h1>
+              <h1>MUMMAT</h1>
+              <h1>MUMMAT</h1>
+              <h1>MUMMAT</h1>
+              <h1>MUMMAT</h1>
+              <h1>MUMMAT</h1>
+              <h1>MUMMAT</h1>
+              <h1>MUMMAT</h1>
+              <h1>MUMMAT</h1>
+              <h1>MUMMAT</h1>
+              <h1>MUMMAT</h1>
+              <h1>MUMMAT</h1>
+              <h1>MUMMAT</h1>
+              <h1>MUMMAT</h1>
+              <h1>MUMMAT</h1>
+              <h1>MUMMAT</h1>
+              <h1>MUMMAT</h1>
+              <h1>MUMMAT</h1>
+              <h1>MUMMAT</h1>
+              <h1>MUMMAT</h1>
+              <h1>MUMMAT</h1>
+              <h1>MUMMAT</h1>
+            </div>
+        </div>
+        <div class="about">
+            <img src="./assets/layout-img-3.jpg" alt="" class="about__img">
+            <div class="about__content">
+                <h3 class="about__content-title">MUMMAT</h3>
+                <h3 class="about__content-text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Temporibus numquam voluptatibus repudiandae dignissimos minima ratione maiores dolorum exercitationem? Veritatis quae, repudiandae est dolor soluta repellendus omnis pariatur provident ratione suscipit necessitatibus molestiae odit aspernatur quia ut. Optio ut eveniet perspiciatis ipsa fugiat alias deserunt provident similique dolorum.</h3>
+            </div>
+        </div>
+        <div class="scroller" data-direction="left" data-speed="slow">
+            <div class="scroller__inner">
+              <h1>MUMMAT</h1>
+              <h1>MUMMAT</h1>
+              <h1>MUMMAT</h1>
+              <h1>MUMMAT</h1>
+              <h1>MUMMAT</h1>
+              <h1>MUMMAT</h1>
+              <h1>MUMMAT</h1>
+              <h1>MUMMAT</h1>
+              <h1>MUMMAT</h1>
+              <h1>MUMMAT</h1>
+              <h1>MUMMAT</h1>
+              <h1>MUMMAT</h1>
+              <h1>MUMMAT</h1>
+              <h1>MUMMAT</h1>
+              <h1>MUMMAT</h1>
+              <h1>MUMMAT</h1>
+              <h1>MUMMAT</h1>
+              <h1>MUMMAT</h1>
+              <h1>MUMMAT</h1>
+              <h1>MUMMAT</h1>
+              <h1>MUMMAT</h1>
+              <h1>MUMMAT</h1>
+              <h1>MUMMAT</h1>
+              <h1>MUMMAT</h1>
+              <h1>MUMMAT</h1>
+              <h1>MUMMAT</h1>
+              <h1>MUMMAT</h1>
+            </div>
+        </div>
+        <div class="how-to-buy">
+            <div class="how-to-buy__wrapper">
+                <section class="steps">
+                    <h3 class="how-to-buy-title">
+                        HOW TO BUY
+                    </h3>
+                    <div class="steps__wrapper">
+                        <div class="steps-item">
+                            <h4 class="steps-item-subtitle">
+                                STEP 1:
+                            </h4>
+                            <h3 class="steps-item-title">
+                                CHOOSE A CRYPTO-CURRENCY EXCHANGE:
+                            </h3>
+                            <p class="steps-item-text">
+                                Select a reputable exchange known for its security measures, user-friendly interface,
+                                and support for your specific cryptocurrency. Consider factors such as trading fees,
+                                available trading pairs, and customer support options to ensure the exchange meets your
+                                needs.
+                            </p>
+                        </div>
+                        <div class="steps-item">
+                            <h4 class="steps-item-subtitle">
+                                STEP 2:
+                            </h4>
+                            <h3 class="steps-item-title">
+                                SEND YOUR SOLANA TO A 'WALLET'
+                            </h3>
+                            <p class="steps-item-text">
+                                CREATE AN ACCOUNT WITH PHANTOM, BACKPACK OR ANY WALLET OF YOUR CHOICE
+                            </p>
+                        </div>
+                        <div class="steps-item">
+                            <h4 class="steps-item-subtitle">
+                                STEP 3:
+                            </h4>
+                            <h3 class="steps-item-title">
+                                TRANSFER SOLANA
+                            </h3>
+                            <p class="steps-item-text">
+                                TRANSFER YOUR SOLANA TO YOUR WALLET.
+                            </p>
+                        </div>
+                        <div class="steps-item">
+                            <h4 class="steps-item-subtitle">
+                                STEP 4:
+                            </h4>
+                            <h3 class="steps-item-title">
+                                BUY MUMMAT
+                            </h3>
+                            <p class="steps-item-text">
+                                CONNECT YOUR WALLET TO A DECENTRALIZED EXCHANGE LIKE JUPITER OR RAYDIUM.
+                            </p>
+                        </div>
+                    </div>
+                    <div class="steps__controls">
+                        <div class="steps__controls-item active"></div>
+                        <div class="steps__controls-item"></div>
+                        <div class="steps__controls-item"></div>
+                        <div class="steps__controls-item"></div>
+                    </div>
+                </section>
+                <div id="integrated-terminal"></div>
+            </div>
+        </div>
+        <div class="scroller" data-direction="left" data-speed="slow">
+            <div class="scroller__inner">
+              <h1>MUMMAT</h1>
+              <h1>MUMMAT</h1>
+              <h1>MUMMAT</h1>
+              <h1>MUMMAT</h1>
+              <h1>MUMMAT</h1>
+              <h1>MUMMAT</h1>
+              <h1>MUMMAT</h1>
+              <h1>MUMMAT</h1>
+              <h1>MUMMAT</h1>
+              <h1>MUMMAT</h1>
+              <h1>MUMMAT</h1>
+              <h1>MUMMAT</h1>
+              <h1>MUMMAT</h1>
+              <h1>MUMMAT</h1>
+              <h1>MUMMAT</h1>
+              <h1>MUMMAT</h1>
+              <h1>MUMMAT</h1>
+              <h1>MUMMAT</h1>
+              <h1>MUMMAT</h1>
+              <h1>MUMMAT</h1>
+              <h1>MUMMAT</h1>
+              <h1>MUMMAT</h1>
+              <h1>MUMMAT</h1>
+              <h1>MUMMAT</h1>
+              <h1>MUMMAT</h1>
+              <h1>MUMMAT</h1>
+              <h1>MUMMAT</h1>
+            </div>
+        </div>
+        <div class="tokenomics">
+            <h2 class="tokenomics-title">Landlord's Tokenomics</h2>
+            <div class="tokenomics__columns">
+                <div class="tokenomics__columns-column">
+                    <img class="tokenomics__columns-column-img" src="./assets/coin.png" alt="Image 1">
+                    <h2 class="tokenomics__columns-column-title">823.9M</h2>
+                    <h3 class="tokenomics__columns-column-subtitle">Current Token Supply</h3>
+                </div>
+                <div class="tokenomics__columns-column">
+                    <img class="tokenomics__columns-column-img" src="./assets/taxes.svg" alt="Image 2">
+                    <h2 class="tokenomics__columns-column-title">0/0</h2>
+                    <h3 class="tokenomics__columns-column-subtitle">Tax</h3>
+                </div>
+            </div>
+        </div>
+        <div class="scroller" data-direction="left" data-speed="slow">
+            <div class="scroller__inner">
+              <h1>MUMMAT</h1>
+              <h1>MUMMAT</h1>
+              <h1>MUMMAT</h1>
+              <h1>MUMMAT</h1>
+              <h1>MUMMAT</h1>
+              <h1>MUMMAT</h1>
+              <h1>MUMMAT</h1>
+              <h1>MUMMAT</h1>
+              <h1>MUMMAT</h1>
+              <h1>MUMMAT</h1>
+              <h1>MUMMAT</h1>
+              <h1>MUMMAT</h1>
+              <h1>MUMMAT</h1>
+              <h1>MUMMAT</h1>
+              <h1>MUMMAT</h1>
+              <h1>MUMMAT</h1>
+              <h1>MUMMAT</h1>
+              <h1>MUMMAT</h1>
+              <h1>MUMMAT</h1>
+              <h1>MUMMAT</h1>
+              <h1>MUMMAT</h1>
+              <h1>MUMMAT</h1>
+              <h1>MUMMAT</h1>
+              <h1>MUMMAT</h1>
+              <h1>MUMMAT</h1>
+              <h1>MUMMAT</h1>
+              <h1>MUMMAT</h1>
+            </div>
+        </div>
+        <section class="gallery">
+            <img src="./assets/bg-hero.jpg" alt="" class="gallery-item">
+            <img src="./assets/hero.jpg" alt="" class="gallery-item">
+            <img src="./assets/layout-img-2.jpg" alt="" class="gallery-item">
+            <img src="./assets/layout-img.jpg" alt="" class="gallery-item">
+            <img src="./assets/layout-img-3.jpg" alt="" class="gallery-item">
+            <img src="./assets/layout-img-4.jpg" alt="" class="gallery-item">
+            <img src="./assets/mummat-img.jpg" alt="" class="gallery-item">
+            <img src="./assets/playa-bg.jpg" alt="" class="gallery-item">
+            <img src="./assets/mummat-smoke.jpg" alt="" class="gallery-item">
+            <img src="./assets/mummat.jpg" alt="" class="gallery-item">
+        </section>
+    </main>
+
     <script src="./scripts/main.js"></script>
 </body>
+
 </html>
